style.css
/* ... */
/*MOBILE*/
@media only screen and (max-width: 767px) {
  button, .button, input[type=submit] {
    display: block;
    width: 100% !important;
    margin: 15px 0;
  }
}
/*Metadata content*/
.metadata {
  font: 11px Sans-Serif;
}
.metadata a {
  color: #5d504f;
}
.metadata a:hover {
  color: #050000;
}

.metadata {
  list-style: none;
}
.metadata .date {
  font-weight: 700;
}

.metadata.horizontal {
  margin-top: 15px;
  display: inline-block;
}
.metadata.horizontal li {
  float: left;
}
.metadata.horizontal li:not(:last-of-type) {
  margin-right: 15px;
}

.metadata.vertical {
  margin-top: 5px;
}
.metadata.vertical li {
  text-align: right;
  margin-bottom: 7px;
}
.metadata.vertical .date {
  margin-bottom: 15px;
}

@media only screen and (max-width: 767px) {
  /*Metadata content*/
  ul.metadata.vertical {
    margin-top: 30px;
    display: inline-block;
  }
  ul.metadata.vertical li {
    float: left;
    margin-right: 15px;
    text-align: left;
  }
  ul.metadata.vertical li:last-child {
    margin-right: 0;
  }
  ul.metadata.vertical li:first-child {
    margin-left: 0;
  }
}
/*Wordpress Classes*/
.alignleft, .alignright, .aligncenter {
  margin: 10px 0 15px 0;
}

.alignleft {
  float: left !important;
  margin-right: 15px;
}

.alignright {
  float: right !important;
  margin-left: 15px;
}

.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.wp-caption {
  text-align: center;
  margin-top: 10px 0 15px 0;
}
.wp-caption img {
  border: 0 none;
}

.wp-caption-text {
  font-size: 13px !important;
  color: #5d504f;
  margin-top: 10px;
}

.gallery-caption {
  margin-left: 0 !important;
  font: 11px/1.45 Sans-Serif !important;
}

.sticky .post-title:before {
  content: "Sticky: ";
}

.bypostauthor {
  border-color: #5d504f;
}

.widget {
  font-size: 11px;
  margin-bottom: 15px;
}
.widget p {
  font-size: 11px;
}

.widget-title {
  font-size: 13px;
}

.widget.six.columns, .widget.three.columns, .widget.four.columns {
  float: left !important;
}

.widget.six.columns:nth-child(2n+1), .widget.three.columns:nth-child(4n+1), .widget.four.columns:nth-child(3n+1) {
  margin-left: 0;
  clear: left;
}

.widget.six.columns:nth-child(2n), .widget.three.columns:nth-child(4n), .widget.four.columns:nth-child(3n) {
  margin-right: 0;
  float: right;
}

input[type=text],
textarea {
  border: 1px solid #5d504f;
  font: 13px Sans-Serif;
  color: #5d504f;
  padding: 3px 4px;
  box-shadow: inset 0px 0px 5px rgba(18, 7, 6, 0.2);
  border-radius: 2px;
}

input[type=text]:focus,
textarea:focus {
  border: 1px solid #050000;
  box-shadow: inset 0px 0px 5px rgba(18, 7, 6, 0.1);
}

#comment-form-content textarea {
  -webkit-transition: height 0.5s cubic-bezier(0.02, 0, 0.18, 1);
  -moz-transition: height 0.5s cubic-bezier(0.02, 0, 0.18, 1);
}

button, .button, input[type=submit] {
  -webkit-transition: background-color 0.5s cubic-bezier(0.02, 0, 0.18, 1);
  -moz-transition: background-color 0.5s cubic-bezier(0.02, 0, 0.18, 1);
}

#content.single .previous .arrow, #content.single .previous a {
  -webkit-transition: all 0.75s cubic-bezier(0.02, 0, 0.18, 1);
  -moz-transition: all 0.75s cubic-bezier(0.02, 0, 0.18, 1);
}

#site-title-description {
  margin-top: 15px;
}

#site-title {
  font-size: 24px;
  margin-bottom: 5px;
}

#site-description {
  margin-top: 0;
  font-size: 13px;
}

#site-nav {
  margin: 15px 0 30px 0;
  border-bottom: 2px solid #f0eceb;
}

.menu, .sub-menu {
  list-style: none;
}

.menu {
  margin: 0 0 15px 0;
}

.menu > .menu-item:hover {
  border-top: 1px solid #5d504f;
  margin-top: -1px;
}

.menu > .menu-item > .sub-menu {
  position: absolute;
  z-index: 999;
  margin: 0;
  left: -9999px;
  border-top: 2px solid #3d302f;
  border-bottom: 1px solid #5d504f;
  background: #f7f4f4;
  padding-bottom: 10px;
}

.menu > .menu-item {
  margin-right: 10px;
  float: left;
}
.menu > .menu-item > a {
  padding: 15px 10px;
}

.menu-item {
  position: relative;
}
.menu-item a {
  padding: 7px 30px 7px 10px;
  display: block;
  color: #050000;
  font: 700 11px Sans-Serif;
}
.menu-item a:hover {
  color: #5d504f;
}

.menu-item:hover > .sub-menu {
  left: 0;
}

.sub-menu .menu-item:first-child {
  margin-top: 10px;
}
.sub-menu > .menu-item a {
  padding-left: 15px;
}
.sub-menu a {
  font-weight: 400;
  white-space: nowrap;
}
.sub-menu a:hover {
  background: #e5dedc;
  border: 0;
}

#page-header {
  position: relative;
}

#sub-header {
  border-bottom: 2px solid #f0eceb;
  padding-bottom: 15px;
  margin-bottom: 30px;
}
#sub-header p {
  margin-top: 0;
}

@media only screen and (max-width: 420px) {
  #site-nav li {
    float: none;
    margin: 0;
    border-bottom: 1px solid #f0eceb;
  }
  #site-nav li a {
    font-size: 13px;
    padding: 15px 0;
  }
  #site-nav li:last-child {
    border-bottom: 0;
  }

  #site-nav ul ul {
    display: none;
  }
}
.posts {
  margin: 60px auto;
}

.post-title {
  font-size: 20px;
}

.post-header {
  margin-bottom: 15px;
}

.post-content {
  font: 17px/1.6 Georgia, serif;
}
.post-content p, .post-content ul li, .post-content ol li, .post-content dt, .post-content dd, .post-content blockquote {
  font-size: 17px;
}
.post-content code, .post-content small {
  font-size: 13px;
}
.post-content img {
  max-width: 100%;
}

.post, .type-page {
  margin: 60px 0;
}
.post:first-child, .type-page:first-child {
  margin-top: 0;
}
.post:last-child, .type-page:last-child {
  margin-bottom: 0;
}
.post.leftaside .post-content, .type-page.leftaside .post-content {
  width: 73.9%;
}
.post.leftaside .post-info, .type-page.leftaside .post-info {
  width: 21.679%;
}

/*MOBILE*/
@media only screen and (max-width: 767px) {
  #content.home .post-group.oneup.large .post-content p {
    font-size: 24px;
  }
}
.post-group-header {
  margin-bottom: 30px;
  padding-bottom: 5px;
  border-bottom: 1px #f0eceb solid;
}
.post-group-header .label {
  font-weight: 700;
}
.post-group-header .caption {
  font-style: italic;
  color: #5d504f;
  margin: 0 10px;
}
/* ... */

